--- a/theme/css/default.css
+++ b/theme/css/default.css
@@ -305,12 +305,12 @@ slides > slide:not(.nobackground):before {
   position: absolute;
   bottom: 20px;
   left: 60px;
-  background: url(../../images/google_developers_icon_128.png) no-repeat 0 50%;
-  -webkit-background-size: 30px 30px;
-  -moz-background-size: 30px 30px;
-  -o-background-size: 30px 30px;
-  background-size: 30px 30px;
-  padding-left: 40px;
+  background: url(../../images/harvard-logo.png) no-repeat 0 50%;
+  -webkit-background-size: 150px 30px;
+  -moz-background-size: 150px 30px;
+  -o-background-size: 150px 30px;
+  background-size: 150px 30px;
+  padding-left: 160px;
   height: 30px;
   line-height: 1.9;
 }
